adds default files

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>projectbook-auth</title>
+    <title>ProjectBook</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -19,7 +19,9 @@
       <nav></nav>
       <div id="authbar"></div>
     </header>
-    <main></main>
+    <main>
+      <h1>Hello, ProjectBook!</h1>
+    </main>
     <footer></footer>
 
     <script
